# iani

./: .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md
R/: extendr-wrappers.R  wrapper.R
man/: gwas_associations.Rd  gwas_download_files.Rd  gwas_files.Rd  gwas_filter.Rd  gwas_get.Rd  gwas_list_files.Rd
src/: Makevars.in  Makevars.win.in  entrypoint.c  iani-win.def
src/rust/: Cargo.toml
src/rust/src/: lib.rs
tools/: config.R
