[package]
name = 'iani'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'
authors = ["Brett Gilio <bgilio@kumc.edu>"]
description = "GWAS Summary Statistics Database API client for R"
license = "MIT"

[lib]
crate-type = [ 'staticlib' ]
name = 'iani'

[dependencies]
extendr-api = '*'
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
url = "2.5.4"
